# gwplot

./: .gitignore  .gitmodules  MANIFEST.in  README.md  _custom_build.py  build_gw.py  meson.build  meson.options  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  macOS_arm64.yaml  macos_arm64.yaml  macos_x64.yaml  main.yaml  manylinux.yaml  manylinux_2_28.yaml  osx_arm64.yaml  pages.yml
ci/: manylinux-build-deps  manylinux-deps  manylinux-run-deps  manylinux-test  osx-build-deps  osx-deps  osx-run-deps
docs/: Gemfile  _config.yml  index.md
docs/docs/: API.md  Install.md  quickstart.md
docs/docs/api/: gw-init.md  gw-interactive.md  gw-loading-data.md  gw-managing-regions.md  gw-palette.md  gw-saving-images.md  gw-settings.md  gw-visual.md
examples/: gwplot_jupyterlab.ipynb  gwplot_matplotlib.py  gwplot_pillow.py  gwplot_pysam_multi.py  gwplot_pysam_single.py  save_png_local.py  save_png_online.py
examples/fastapi_demo/: fastapi_server.py
examples/fastapi_demo/static/css/: styles.css
examples/fastapi_demo/static/js/: main.js
examples/fastapi_demo/templates/: index.html
examples/flask_demo/: flask_server.py
examples/flask_demo/static/css/: styles.css
examples/flask_demo/static/js/: main.js
examples/flask_demo/templates/: index.html
gwplot/: __init__.py  glfw_interface.pyx  glfw_keymap.py  interface.cpp  interface.pxd  interface.pyx
gwplot/tests/: ref.fa  small.bam  small.bam.bai  test.py
tests/: custom_theme.json  example.py  flask_server.py  ref.fa.fai  test.py  test.vcf
