[build-system]
requires = [
    "meson-python>=0.13.0",
    "meson>=1.1.0",
    "cython>=3.0.0",
    "numpy>=1.19.3",
    "pysam>=0.21.0",
]
build-backend = "mesonpy"
#[build-system]
#requires = ["setuptools>=61.0", "cython", "numpy>=1.19.3", "pysam>=0.21.0"]
#build-backend = "setuptools.build_meta"

[project]
name = "gwplot"
version = "0.4.0"
license = { file = "LICENSE" }
description = "Visualise genomics data fast"
requires-python = ">=3.9"
readme = "README.md"
authors = [
    { name = "Kez Cleal", email = "clealk@cardiff.ac.uk" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [ "numpy>=1.19.3", "pysam>=0.21.0" ]

[project.optional-dependencies]
test = ["matplotlib", "Flask", "pillow"]
pillow = ["pillow"]
all = ["matplotlib", "Flask", "pillow"]

#[tool.setuptools]
#packages = ["gwplot"]

[project.urls]
Repository = "https://github.com/kcleal/gwplot"

[tool.meson-python.args]
setup = []
